--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -3,6 +3,8 @@ FROM nginx:alpine
 LABEL maintainer="Mahmoud Zalt <mahmoud@zalt.me>"
 
 COPY nginx.conf /etc/nginx/
+COPY ssl/default.key /etc/nginx/ssl/
+COPY ssl/default.csr /etc/nginx/ssl/
 
 # If you're in China, or you need to change sources, will be set CHANGE_SOURCE to true in .env.
 
